[package]
name = "gokz-db-dump"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.6", features = [
	"runtime-tokio-rustls",
	"sqlite",
	"json",
	"all-types",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gokz_rs = "*"
