[package]
name = "gokz-db-dump"
version = "0.3.0"
edition = "2021"

[dependencies]
color-eyre = "0.6"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.6", features = [
	"runtime-tokio-rustls",
	"sqlite",
	"json",
	"all-types",
] }
serde = { version = "1", features = ["derive"] }
gokz_rs = "*"
csv = "1.2.1"
